# OOP

COLOCVIU 5IULIE/: 143_Florea_Madalin-Alexandru.cpp  CMakeLists.txt
Colocviu 2019 v2/: CMakeLists.txt  main.cpp
Colocviu 2021/: CMakeLists.txt  main.cpp
Proiectul 1/1. Spalatorie Automata/: CMakeLists.txt
Proiectul 1/5. Clasa HangMan/: CMakeLists.txt
Proiectul 2/: 143_Florea_Madalin.cpp  CMakeLists.txt  Subiect.docx  main.cpp
Proiectul 2/util/: IoBase.h
Tema1 Laborator/ex1/: main.cpp
Tema1 Laborator/ex2/: 2.layout  main.cpp
Tema1 Laborator/ex3/: main.cpp
Tema1 Laborator/ex4/: main.cpp
Tema1 Laborator/ex5/: ex5.layout  main.cpp
Tema1 Laborator/ex6/: CMakeLists.txt  pb1.cpp  pb5.cpp
Tema2 Laborator/ex1/: main.cpp
Tema2 Laborator/ex2/: main.cpp
Tema2 Laborator/ex3/: main.cpp
Tema2 Laborator/ex4/: main.cpp
Tema2 Laborator/ex5/: main.cpp
Tema2 Laborator/ex6/: main.cpp
Tema2 Laborator/ex7/: CMakeLists.txt  main.cpp
Tema3 Laborator (Proiectul 1)/1. Spalatorie Automata/: main.cpp
Tema3 Laborator (Proiectul 1)/5. Clasa HangMan/: main.cpp
Tema4 Laborator/1. College/: main.cpp
Tema4 Laborator/2. Constructii/: CMakeLists.txt  (+1 more)
Tema6 Laborator/: CMakeLists.txt  Exercitiul 0 - Magazin de scaune.cpp  Exercitiul 1 - De la suc la placinte.cpp  Exercitiul 2 - Coding Contest.cpp  IoBase.h
Tema7 Laborator/: CMakeLists.txt  main1.cpp  main2.cpp
Tema8 Laborator/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp
Tema9 Laborator/: CMakeLists.txt  main0.cpp  main1.cpp  main2.cpp  main3.cpp
colocviu 2019/: CMakeLists.txt  main.cpp
(+15 files in other folders)
